Update Panama to JDK 22